refactor(domain): 검증 로직 수정